fix h5p iframe overflow

--- a/theme/default/css/h5p.css
+++ b/theme/default/css/h5p.css
@@ -4,3 +4,7 @@
 ul.h5p-actions {
     display: none;
 }
+
+html.h5p-iframe {
+    overflow: hidden;
+}
